build: replace remaining class newInstance calls